--- a/sections/problem.tex
+++ b/sections/problem.tex
@@ -12,8 +12,9 @@ Finally, existing research as well as solutions are examined in their coping wit
 \section{Framework Requirements}
 
 \subsection{Multipurpose \& Interoperability}
+\label{problem-multipurpose}
 
-A \emph{multi-purpose} recommender system is able to cope with different data sources and techniques in parallel. Ideally this system is open and extendable for possible forthcoming, yet unknown requirements. It is not to be confused with hybrid recommender systems (see section \ref{bg-tech-hybrid}) which combine different systems into one. In this project I will provide an ecosystem to plug different recommender systems in (see section \ref{sol-feature-plugin}).
+A \emph{multi-purpose} recommender system is able to cope with different data sources and techniques in parallel. Ideally this system is open and extendable for possible forthcoming, yet unknown requirements. It is not to be confused with hybrid recommender systems (see section \ref{bg-tech-hybrid}) which combine different systems into one. In this project I will provide an ecosystem to plug different recommender systems in (see section \ref{sol-design-layer-reco}).
 
 Another requirement is the interoperability between recommender systems. \citet{manouselis07} differentiate between three criteria:
 
@@ -81,7 +82,7 @@ Recommender systems are usually tightly coupled to the primary application, whic
 
 \subsection{Ease of Integration}
 
-The complexity and cost of integrating recommender systems is a major constraint for many projects. Given the requirements above it is even more challenging to keep the integration as easy as possible. Nonetheless abstraction should help reduce the amount of knowledge needed. Furthermore the fewer types of communication and configuration required the less effort will be necessary. See \emph{Distinctive Features} (section \ref{sol-design-features}) on how I plan to accomplish this.
+The complexity and cost of integrating recommender systems is a major constraint for many projects. Given the requirements above it is even more challenging to keep the integration as easy as possible. Nonetheless abstraction should help reduce the amount of knowledge needed. Furthermore the fewer types of communication and configuration required the less effort will be necessary.
 
 
 
