--- a/includes/config.tex
+++ b/includes/config.tex
@@ -7,7 +7,8 @@
 \usepackage{mathtools}
 \usepackage{listings}
 \usepackage{float}
-\usepackage[svgnames]{xcolor}
+\usepackage{fontspec}
+\usepackage{minted}
 \usepackage[export]{adjustbox}
 \usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
 \usepackage[font=small]{caption}
@@ -21,18 +22,14 @@
 % images
 \graphicspath{{media/}}
 
-% XML listing
-\lstdefinelanguage{XML}
-{
-  basicstyle=\ttfamily\footnotesize,
-  morestring=[b]",
-  moredelim=[s][\bfseries\color{Maroon}]{<}{\ },
-  moredelim=[s][\bfseries\color{Maroon}]{</}{>},
-  moredelim=[l][\bfseries\color{Maroon}]{/>},
-  moredelim=[l][\bfseries\color{Maroon}]{>},
-  morecomment=[s]{<?}{?>},
-  morecomment=[s]{<!--}{-->},
-  commentstyle=\color{DarkOliveGreen},
-  stringstyle=\color{blue},
-  identifierstyle=\color{red}
-}
+% code listing
+\definecolor{codebg}{rgb}{0.95,0.95,0.95}
+
+\newmintedfile{js}{bgcolor=codebg, fontsize=\small, numbersep=6pt}
+\newmintedfile{json}{bgcolor=codebg, fontsize=\small, numbersep=6pt}
+\newminted[python]{python}{bgcolor=codebg, fontsize=\small, numbersep=6pt}
+\newmintedfile{xml}{bgcolor=codebg, fontsize=\small, numbersep=6pt}
+
+\setlength\partopsep{-\topsep}
+\addtolength\partopsep{-\parskip}
+\addtolength\partopsep{0.5cm}
