--- a/meta/toc.tex
+++ b/meta/toc.tex
@@ -8,4 +8,7 @@
 \listoffigures
 \addcontentsline{toc}{chapter}{List of Figures}
 
+\listoflistings
+\addcontentsline{toc}{chapter}{List of Listings}
+
 \input{./includes/spacing.tex}
